force-app/main/default/objects/OfferLineItem__c/OfferLineItem__c.object-meta.xml
<CustomObject>
    <label>Offer Line Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>