force-app/main/default/objects/OfferLineItem__c/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <label>Bundle</label>
    <referenceTo>OfferBundle__c</referenceTo>
    <relationshipLabel>Offer Line Items</relationshipLabel>
    <relationshipName>items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>