force-app/main/default/objects/OfferLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Offer Line Items</relationshipLabel>
    <relationshipName>OfferLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>